--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "typescript": "~3.5.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "1.6.1",
+    "@aws-cdk/aws-iam": "^1.6.1",
+    "@aws-cdk/aws-lambda": "^1.6.1",
+    "@aws-cdk/aws-s3": "^1.6.1",
     "@aws-cdk/core": "^1.6.1",
     "source-map-support": "^0.5.9"
   }
